mantle-build/tests/ui/multi_service_main.stderr
error: Multiple invocations of `mantle::service!`. Second occurrence here:
  --> $DIR/multi_service_main.rs:23:5
   |
23 |     mantle::service!(Counter2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

